--- a/Example2.html
+++ b/Example2.html
@@ -370,7 +370,7 @@
                     <div class="relative">
                         <!-- A4 Template Preview with Background Image -->
                         <div class="relative bg-gradient-to-br from-rose-50 to-pink-50 overflow-hidden" style="aspect-ratio: 210/297;">
-                            <div class="absolute inset-0 bg-cover bg-center bg-no-repeat" style="background-image: url('template_1.png');">
+                            <div class="absolute inset-0 bg-cover bg-center bg-no-repeat" style="background-image: url('t_A.jpg');">
                                 <!-- Fallback gradient if image not loaded -->
                                 <div class="absolute inset-0 bg-gradient-to-br from-rose-100/50 to-pink-100/50"></div>
                             </div>
@@ -406,7 +406,7 @@
                     <div class="relative">
                         <!-- A4 Template Preview with Background Image -->
                         <div class="relative bg-gradient-to-br from-blue-50 to-indigo-50 overflow-hidden" style="aspect-ratio: 210/297;">
-                            <div class="absolute inset-0 bg-cover bg-center bg-no-repeat" style="background-image: url('template_2.webp');">
+                            <div class="absolute inset-0 bg-cover bg-center bg-no-repeat" style="background-image: url('t_B.jpg');">
                                 <!-- Fallback gradient if image not loaded -->
                                 <div class="absolute inset-0 bg-gradient-to-br from-blue-100/50 to-indigo-100/50"></div>
                             </div>
@@ -437,7 +437,7 @@
                     <div class="relative">
                         <!-- A4 Template Preview with Background Image -->
                         <div class="relative bg-gradient-to-br from-purple-50 to-pink-50 overflow-hidden" style="aspect-ratio: 210/297;">
-                            <div class="absolute inset-0 bg-cover bg-center bg-no-repeat" style="background-image: url('template_3.webp');">
+                            <div class="absolute inset-0 bg-cover bg-center bg-no-repeat" style="background-image: url('t_C.jpg');">
                                 <!-- Fallback gradient if image not loaded -->
                                 <div class="absolute inset-0 bg-gradient-to-br from-purple-100/50 to-pink-100/50"></div>
                             </div>
@@ -474,7 +474,7 @@
                     <div class="relative">
                         <!-- A4 Template Preview with Background Image -->
                         <div class="relative bg-gradient-to-br from-amber-50 to-yellow-50 overflow-hidden" style="aspect-ratio: 210/297;">
-                            <div class="absolute inset-0 bg-cover bg-center bg-no-repeat" style="background-image: url('template_4.webp');">
+                            <div class="absolute inset-0 bg-cover bg-center bg-no-repeat" style="background-image: url('t_D.png');">
                                 <!-- Fallback gradient if image not loaded -->
                                 <div class="absolute inset-0 bg-gradient-to-br from-amber-100/50 to-yellow-100/50"></div>
                             </div>
@@ -511,7 +511,7 @@
                     <div class="relative">
                         <!-- A4 Template Preview with Background Image -->
                         <div class="relative bg-gradient-to-br from-emerald-50 to-teal-50 overflow-hidden" style="aspect-ratio: 210/297;">
-                            <div class="absolute inset-0 bg-cover bg-center bg-no-repeat" style="background-image: url('template_5.jpg');">
+                            <div class="absolute inset-0 bg-cover bg-center bg-no-repeat" style="background-image: url('t_E.jpg');">
                                 <!-- Fallback gradient if image not loaded -->
                                 <div class="absolute inset-0 bg-gradient-to-br from-emerald-100/50 to-teal-100/50"></div>
                             </div>
@@ -542,7 +542,7 @@
                     <div class="relative">
                         <!-- A4 Template Preview with Background Image -->
                         <div class="relative bg-gradient-to-br from-red-50 to-rose-50 overflow-hidden" style="aspect-ratio: 210/297;">
-                            <div class="absolute inset-0 bg-cover bg-center bg-no-repeat" style="background-image: url('template_6.webp');">
+                            <div class="absolute inset-0 bg-cover bg-center bg-no-repeat" style="background-image: url('t_F.jpg');">
                                 <!-- Fallback gradient if image not loaded -->
                                 <div class="absolute inset-0 bg-gradient-to-br from-red-100/50 to-rose-100/50"></div>
                             </div>
@@ -810,12 +810,12 @@
 
             // Data mapping for Colors and Background Images
             const templateData = {
-                'classic-rose': { border: 'border-rose-200', text: 'text-rose-600', bg: 'url("template_1.png")' },
-                'modern-blue': { border: 'border-blue-200', text: 'text-blue-600', bg: 'url("template_2.webp")' },
-                'minimalist-green': { border: 'border-emerald-200', text: 'text-emerald-600', bg: 'url("template_5.jpg")' },
-                'elegant-purple': { border: 'border-purple-200', text: 'text-purple-600', bg: 'url("template_3.webp")' },
-                'traditional-gold': { border: 'border-amber-200', text: 'text-amber-600', bg: 'url("template_4.webp")' },
-                'royal-maroon': { border: 'border-red-200', text: 'text-red-700', bg: 'url("template_6.webp")' }
+                'classic-rose': { border: 'border-rose-200', text: 'text-rose-600', bg: 'url("t_A.jpg")' },
+                'modern-blue': { border: 'border-blue-200', text: 'text-blue-600', bg: 'url("t_B.jpg")' },
+                'minimalist-green': { border: 'border-emerald-200', text: 'text-emerald-600', bg: 'url("t_C.jpg")' },
+                'elegant-purple': { border: 'border-purple-200', text: 'text-purple-600', bg: 'url("t_D.png")' },
+                'traditional-gold': { border: 'border-amber-200', text: 'text-amber-600', bg: 'url("t_E.jpg")' },
+                'royal-maroon': { border: 'border-red-200', text: 'text-red-700', bg: 'url("t_F.jpg")' }
             };
 
             const config = templateData[templateId];
